# stol-its-msg

./: .gitignore  .gitlab-ci.codegen.yml  .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  DRIVERS.md  README POC.md  README.md  build.sh  patches.md  run.txt  setup.sh
.github/workflows/: bloom-release.yml  codegen.yml  doc.yml  docker-ros.yml  industrial_ci.yml
asn1/raw/carma_j2735/: BasicSafetyMessage.asn  CommonSafetyRequest.asn  CommonSafetyRequest.asn1  MessageFrame.asn  TestMessage00.asn  TestMessage00.asn1  TestMessage01.asn
assets/: BasicSafetyMessage_main.cpp  CommonSafetyRequest.json  TestMessage00.json  TestMessage00_main.cpp  TravelerInformation_main.cpp  json.hpp  main.cpp  main1.cpp  main2.cpp  parser.py
doc/: Doxyfile  README.md
etsi_its_coding/etsi_its_carma_j2735_coding/include/etsi_its_carma_j2735_coding/: ANY.h  BIT_STRING.h  BOOLEAN.h  ENUMERATED.h  GraphicString.h  IA5String.h  INTEGER.h  NativeEnumerated.h  NativeInteger.h  OBJECT_IDENTIFIER.h  OCTET_STRING.h  OPEN_TYPE.h  ObjectDescriptor.h  aper_decoder.h  aper_encoder.h  aper_opentype.h  aper_support.h  asn_SEQUENCE_OF.h  asn_application.h  asn_bit_data.h  asn_codecs_prim.h  asn_internal.h  asn_ioc.h  carma_j2735_AccelSteerYawRateConfidence.h  carma_j2735_Acceleration.h  carma_j2735_AccelerationConfidence.h  carma_j2735_AccelerationSet4Way.h  carma_j2735_AddGrpB_Angle.h  carma_j2735_AddGrpB_Elevation.h  carma_j2735_AddGrpB_MsgCount.h  carma_j2735_AddGrpB_TimeMark.h  carma_j2735_AdvisorySpeed.h  carma_j2735_AdvisorySpeedList.h  carma_j2735_AdvisorySpeedType.h  carma_j2735_AllowedManeuvers.h  carma_j2735_Altitude.h  carma_j2735_AltitudeConfidence.h  carma_j2735_AltitudeValue.h  carma_j2735_AmbientAirPressure.h  carma_j2735_AmbientAirTemperature.h  (+503 more)
etsi_its_coding/etsi_its_carma_j2735_coding/src/: ANY.c  ANY_aper.c  ANY_uper.c  BIT_STRING.c  BIT_STRING_print.c  BIT_STRING_rfill.c  BIT_STRING_uper.c  BOOLEAN.c  BOOLEAN_aper.c  BOOLEAN_print.c  BOOLEAN_rfill.c  BOOLEAN_uper.c  ENUMERATED.c  ENUMERATED_aper.c  ENUMERATED_uper.c  GraphicString.c  IA5String.c  INTEGER.c  INTEGER_aper.c  INTEGER_print.c  INTEGER_rfill.c  INTEGER_uper.c  NativeEnumerated.c  NativeEnumerated_aper.c  NativeEnumerated_uper.c  NativeInteger.c  NativeInteger_aper.c  NativeInteger_print.c  NativeInteger_rfill.c  NativeInteger_uper.c  OBJECT_IDENTIFIER.c  OBJECT_IDENTIFIER_print.c  OBJECT_IDENTIFIER_rfill.c  OCTET_STRING.c  OCTET_STRING_aper.c  OCTET_STRING_print.c  OCTET_STRING_rfill.c  OCTET_STRING_uper.c  OPEN_TYPE.c  OPEN_TYPE_aper.c  (+548 more)
etsi_its_conversion/etsi_its_carma_j2735_conversion/include/etsi_its_carma_j2735_conversion/: convertMobilityDynamicID.h  convertMobilityGUID.h  convertMobilityHeader.h  convertMobilityResponse.h  convertMobilityResponseFlag.h  convertMobilityStaticID.h  convertMobilityTimestamp.h  convertMobilityUrgency.h  convertTestMessage01.h
etsi_its_msgs/etsi_its_carma_j2735_msgs/msg/: MobilityDynamicID.msg  MobilityGUID.msg  MobilityHeader.msg  MobilityResponse.msg  MobilityResponseFlag.msg  MobilityStaticID.msg  MobilityTimestamp.msg  MobilityUrgency.msg  TestMessage01.msg
utils/codegen/asn1-to-json/: README.md  requirements.txt
utils/codegen/asn1-to-json/src/: asn1ToJsonMsg.py
utils/codegen/asn1-to-json/src/utils/: asn1CodeGenerationUtils.py
utils/codegen/asn1ToC/: asn1ToC.py
utils/codegen/asn1ToC/docker/: asn1c.Dockerfile
utils/codegen/codegen-py/: README.md  asn1CodeGenerationUtils.py  asn1CodeGenerationUtilsRos.py  asn1ToConversionHeader.py  asn1ToJsonSchema.py  asn1ToRosMsg.py  codeGeneration.py  codegen.py  preProcess.py  requirements.txt
utils/codegen/codegen-py/templates/: BIT_STRING.c.j2  BIT_STRING.cpp.j2  BIT_STRING.hpp.j2  CHOICE.c.j2  CHOICE.cpp.j2  CHOICE.hpp.j2  ENUMERATED.c.j2  ENUMERATED.cpp.j2  FUNCTION_WRAPPER.cpp.j2  HEADER.hpp.j2  IA5STRING.c.j2  IA5STRING.cpp.j2  IA5STRING.hpp.j2  JsonChoiceType.json.jinja2  JsonMessageType.json.jinja2  JsonSchemaType.json.jinja2  JsonSequenceType.json.jinja2  OCTET_STRING.c.j2  OCTET_STRING.cpp.j2  PRIMITIVES.cpp.j2  PRIMITIVES.hpp.j2  SEQUENCE.c.j2  SEQUENCE.cpp.j2  SEQUENCEOF.c.j2  SEQUENCE_OF.cpp.j2  convertChoice.j2  convertJsonType.h.jinja2  convertSequenceOf.j2
utils/codegen/codegen-py/tests/: msgs.py  test_asn1ToJson.py  test_asn1ToJsonMsg.py  test_msgs.py
utils/codegen/codegen-py/tests/docker/: test.Dockerfile
utils/codegen/codegen-py/tests/templates/: TEST.c.j2
